--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,33 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
+  adapter: postgresql
   timeout: 5000
+  encoding: unicode
+  database: spreecommercetest
+  pool: 5
+  password:
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: spreecommercetest
+  pool: 5
+  password:
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: spreecommercedev
+  pool: 5
+  password:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: spreecommerceprod
+  pool: 5
+  password:  
